[build-system]
requires = ["setuptools", "wheel", "cython", "oldest-supported-numpy", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cerelink"  # as it would appear on PyPI
dynamic = ["version", "readme"]
authors = [
    {name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com"},
    {name = "Ehsan Azar"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.0",
]
urls = {homepage = "https://github.com/CerebusOSS/CereLink"}

[tool.setuptools.packages.find]
include = ["cerelink*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
cerelink = ["*.dll"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
# Get version from git tags, looking in the root of the repository (not bindings/Python)
root = "../.."
version_file = "cerelink/__version__.py"
# Strip 'v' prefix from tags (v7.6.4 -> 7.6.4)
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
